--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <!-- bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+<!-- favicon -->
 <head>
 <link rel="shortcut icon" type="image/png" href="https://imodspro.com/photos/favicon.png"/>
 </head>
@@ -34,11 +35,11 @@ body, html {
 <!-- Navbar (sit on top) -->
 <div class="w3-top" style="margin:auto">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
-    <a href="#home" class="w3-bar-item w3-button w3-wide"></a> 
+    <a href="#home" class="w3-bar-item w3-button w3-wide"><img src="https://imodspro.com/photos/75x75 OG.png"></a> 
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="http://imodspro.com/" style="text-decoration: none;" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
-      <a href="https://imodspro.com/#about" style="text-decoration: none;" class="w3-bar-item w3-button">ABOUT</a>
+      <a href="#about" style="text-decoration: none;" class="w3-bar-item w3-button">ABOUT</a>
       <a href="http://imodspro.com/store" style="text-decoration: none;" class="w3-bar-item w3-button"><img src="https://cdn.discordapp.com/attachments/353766529277362188/591318506742480942/Webp.net-resizeimage.png"> STORE</a>
       <a href="#contact" style="text-decoration: none;" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
     </div>
@@ -54,7 +55,7 @@ body, html {
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
   <a href="http://imodspro.com/" style="text-decoration: none;" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
-  <a href="https://imodspro.com/#about" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button">ABOUT</a>
+  <a href="#about" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button">ABOUT</a>
   <a href="http://imodspro.com/store" onclick="w3_close()" class="w3-bar-item w3-button">STORE</a>
   <a href="#contact" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button">CONTACT</a>
   <a href="" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button">yes</a>
@@ -68,8 +69,8 @@ body, html {
   </div> 
   <div class="w3-display-bottomleft w3-text-black w3-large" style="padding:24px 48px">
     <i class="fa fa-facebook-official w3-hover-opacity w3-text-black"></i>
-    <a href="https://www.instagram.com/iModsPro/"><i class="fa fa-instagram w3-text-black w3-hover-opacity"></i></a>
-    <a href="https://twitter.com/iModsPro"><i class="fa fa-twitter w3-hover-opacity w3-text-black"></i></a>
+    <a href="https://www.instagram.com/bxsci_device_repair/"><i class="fa fa-instagram w3-text-black w3-hover-opacity"></i></a>
+    <i class="fa fa-twitter w3-hover-opacity w3-text-black"></i>
   </div>
 </header>
 
@@ -129,7 +130,7 @@ body, html {
   <h3 class="w3-center">CONTACT</h3>
   <p class="w3-center w3-large">Let's get in touch. Feel free to request and ask about repairs and aftermarket modifications.</p>
   <div style="margin-top:48px">
-    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i>Queens, New York</p>
+    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i>Ur_Mum</p>
     <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> goodfixez@gmail.com</p>
     <br>
         <button class="w3-button w3-black" type="submit">
@@ -147,8 +148,8 @@ body, html {
   <a href="#home" style="text-decoration: none;" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <a href="https://www.google.com/"><i class="fa fa-facebook-official w3-text-white w3-hover-opacity"></i></a>
-    <a href="https://www.instagram.com/iModsPro/"><i class="fa fa-instagram w3-text-white w3-hover-opacity"></i></a>
-    <a href="https://twitter.com/iModsPro"><i class="fa fa-twitter w3-hover-opacity w3-text-white"></i></a>
+    <a href="https://www.instagram.com/bxsci_device_repair/"><i class="fa fa-instagram w3-text-white w3-hover-opacity"></i></a>
+    <i class="fa fa-twitter w3-hover-opacity w3-text-white"></i>
   </div>
   <p>Check out <a href="https://www.ifixit.com" title="W3.CSS" target="_blank" class="w3-hover-text-blue">ifixit</a>!</p>
 </footer>
