--- a/store/index.html
+++ b/store/index.html
@@ -10,8 +10,9 @@
 <!-- bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+<!-- favicon -->
 <head>
-<link rel="shortcut icon" type="image/png" href=""/>
+<link rel="shortcut icon" type="image/png" href="https://imodspro.com/photos/favicon.png"/>
 </head>
 
 <style>
@@ -20,18 +21,21 @@ body, html {
   height: 100%;
   line-height: 1.8;
 }
+.w3-bar .w3-button {
+  padding: 16px;
+}
 </style>
 
 <body>
 
 <!-- Navbar (sit on top) -->
-<div class="w3-top" style="margin:auto">
+<div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
-    <a href="#home" class="w3-bar-item w3-button w3-wide"></a> 
+    <a href="#home" class="w3-bar-item w3-button w3-wide"><img src="https://imodspro.com/photos/75x75 OG.png"></a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="http://imodspro.com/" style="text-decoration: none;" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
-      <a href="https://imodspro.com/#about" style="text-decoration: none;" class="w3-bar-item w3-button">ABOUT</a>
+      <a href="#about" style="text-decoration: none;" class="w3-bar-item w3-button">ABOUT</a>
       <a href="http://imodspro.com/store" style="text-decoration: none;" class="w3-bar-item w3-button"><img src="https://cdn.discordapp.com/attachments/353766529277362188/591318506742480942/Webp.net-resizeimage.png"> STORE</a>
       <a href="#contact" style="text-decoration: none;" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
     </div>
@@ -47,7 +51,7 @@ body, html {
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
   <a href="http://imodspro.com/" style="text-decoration: none;" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
-  <a href="https://imodspro.com/#about" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button">ABOUT</a>
+  <a href="#about" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button">ABOUT</a>
   <a href="http://imodspro.com/store" onclick="w3_close()" class="w3-bar-item w3-button">STORE</a>
   <a href="#contact" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button">CONTACT</a>
   <a href="" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button">yes</a>
