--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body, html {
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="http://imodspro.com/" style="text-decoration: none;" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
-      <a href="#about" style="text-decoration: none;" class="w3-bar-item w3-button">ABOUT</a>
+      <a href="https://imodspro.com/#about" style="text-decoration: none;" class="w3-bar-item w3-button">ABOUT</a>
       <a href="http://imodspro.com/store" style="text-decoration: none;" class="w3-bar-item w3-button"><img src="https://cdn.discordapp.com/attachments/353766529277362188/591318506742480942/Webp.net-resizeimage.png"> STORE</a>
       <a href="#contact" style="text-decoration: none;" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
     </div>
@@ -59,7 +59,7 @@ body, html {
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
   <a href="http://imodspro.com/" style="text-decoration: none;" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
-  <a href="#about" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button">ABOUT</a>
+  <a href="https://imodspro.com/#about" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button">ABOUT</a>
   <a href="http://imodspro.com/store" onclick="w3_close()" class="w3-bar-item w3-button">STORE</a>
   <a href="#contact" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button">CONTACT</a>
   <a href="" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button">yes</a>
@@ -73,7 +73,7 @@ body, html {
   </div> 
   <div class="w3-display-bottomleft w3-text-black w3-large" style="padding:24px 48px">
     <i class="fa fa-facebook-official w3-hover-opacity w3-text-black"></i>
-    <a href="https://www.instagram.com/bxsci_device_repair/"><i class="fa fa-instagram w3-text-black w3-hover-opacity"></i></a>
+    <a href="https://www.instagram.com/imodspro/"><i class="fa fa-instagram w3-text-black w3-hover-opacity"></i></a>
     <a href="https://twitter.com/iModsPro"><i class="fa fa-twitter w3-hover-opacity w3-text-black"></i></a>
   </div>
 </header>
@@ -152,7 +152,7 @@ body, html {
   <a href="#home" style="text-decoration: none;" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <a href="https://www.google.com/"><i class="fa fa-facebook-official w3-text-white w3-hover-opacity"></i></a>
-    <a href="https://www.instagram.com/bxsci_device_repair/"><i class="fa fa-instagram w3-text-white w3-hover-opacity"></i></a>
+    <a href="https://www.instagram.com/imodspro/"><i class="fa fa-instagram w3-text-white w3-hover-opacity"></i></a>
     <a href="https://twitter.com/iModsPro"><i class="fa fa-twitter w3-hover-opacity w3-text-white"></i></a>
   </div>
   <p>Check out <a href="https://www.ifixit.com" title="W3.CSS" target="_blank" class="w3-hover-text-blue">ifixit</a>!</p>
