--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@ body, html {
     <a href="http://imodspro.com/" class="w3-bar-item w3-button w3-wide"><img src="https://iModsPro.com/photos/iModsPro-nav.png"></a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
-      <a href="http://imodspro.com/" style="text-decoration: none;" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
-      <a href="https://imodspro.com/#about" style="text-decoration: none;" class="w3-bar-item w3-button">ABOUT</a>
-      <a href="http://imodspro.com/store" style="text-decoration: none;" class="w3-bar-item w3-button"><img src="https://cdn.discordapp.com/attachments/353766529277362188/591318506742480942/Webp.net-resizeimage.png"> STORE</a>
-      <a href="#contact" style="text-decoration: none;" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
+      <a href="http://imodspro.com/" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
+      <a href="https://imodspro.com/#about" class="w3-bar-item w3-button">ABOUT</a>
+      <a href="http://imodspro.com/store" class="w3-bar-item w3-button"><img src="https://cdn.discordapp.com/attachments/353766529277362188/591318506742480942/Webp.net-resizeimage.png"> STORE</a>
+      <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -56,12 +56,12 @@ body, html {
 
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
-  <a href="http://imodspro.com/" style="text-decoration: none;" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
-  <a href="https://imodspro.com/#about" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button">ABOUT</a>
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
+  <a href="http://imodspro.com/" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
+  <a href="https://imodspro.com/#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
   <a href="http://imodspro.com/store" onclick="w3_close()" class="w3-bar-item w3-button">STORE</a>
-  <a href="#contact" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button">CONTACT</a>
-  <a href="" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button">yes</a>
+  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
+  <a href="" onclick="w3_close()" class="w3-bar-item w3-button">yes</a>
 </nav>
 
 <!-- Header with full-height image -->
