--- a/store/index.html
+++ b/store/index.html
@@ -33,10 +33,10 @@ body, html {
     <a href="http://imodspro.com/" class="w3-bar-item w3-button w3-wide"><img src="https://iModsPro.com/photos/iModsPro-nav.png"></a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
-      <a href="http://imodspro.com/" style="text-decoration: none;" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
-      <a href="https://imodspro.com/#about" style="text-decoration: none;" class="w3-bar-item w3-button">ABOUT</a>
-      <a href="http://imodspro.com/store" style="text-decoration: none;" class="w3-bar-item w3-button"><img src="https://cdn.discordapp.com/attachments/353766529277362188/591318506742480942/Webp.net-resizeimage.png"> STORE</a>
-      <a href="#contact" style="text-decoration: none;" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
+      <a href="http://imodspro.com/" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
+      <a href="https://imodspro.com/#about" class="w3-bar-item w3-button">ABOUT</a>
+      <a href="http://imodspro.com/store" class="w3-bar-item w3-button"><img src="https://cdn.discordapp.com/attachments/353766529277362188/591318506742480942/Webp.net-resizeimage.png"> STORE</a>
+      <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -48,12 +48,12 @@ body, html {
 
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
-  <a href="http://imodspro.com/" style="text-decoration: none;" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
-  <a href="https://imodspro.com/#about" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button">ABOUT</a>
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
+  <a href="http://imodspro.com/" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
+  <a href="https://imodspro.com/#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
   <a href="http://imodspro.com/store" onclick="w3_close()" class="w3-bar-item w3-button">STORE</a>
-  <a href="#contact" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button">CONTACT</a>
-  <a href="" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button">yes</a>
+  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
+  <a href="" onclick="w3_close()" class="w3-bar-item w3-button">yes</a>
 </nav>
 
 <!-- Store -->
@@ -79,7 +79,7 @@ body, html {
         <p class="w3-center">Space Grey 64gb Factory Unlocked</p>
         <p class="w3-text-red w3-center">Out of stock</p>
         <p class="w3-large w3-center"><i class="fa fa-phone"></i> <i class="fa fa-wifi"></i></p>
-        <a href="" class="w3-button w3-block w3-black w3-margin-bottom" style="text-decoration: none;">View Item</a>
+        <a href="" class="w3-button w3-block w3-black w3-margin-bottom" >View Item</a>
       </div>
     </div>
     <div class="w3-third w3-margin-bottom">
@@ -90,7 +90,7 @@ body, html {
         <p class="w3-center">Space Grey 64gb Factory Unlocked</p>
         <p class="w3-text-red w3-center">Out of stock</p>
         <p class="w3-large w3-center"><i class="fa fa-phone"></i> <i class="fa fa-wifi"></i></p>
-        <a href="" class="w3-button w3-block w3-black w3-margin-bottom" style="text-decoration: none;">View Item</a>
+        <a href="" class="w3-button w3-block w3-black w3-margin-bottom" >View Item</a>
       </div>
     </div>
   </div>
@@ -113,7 +113,7 @@ body, html {
     <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> goodfixez@gmail.com</p>
     <br>
         <button class="w3-button w3-black" type="submit">
-          <a href="mailto:goodfixez@gmail.com" style="text-decoration: none;" class="w3-text-white"><i class="fa fa-paper-plane w3-text-white"></i> SEND MESSAGE</a>
+          <a href="mailto:goodfixez@gmail.com" class="w3-text-white"><i class="fa fa-paper-plane w3-text-white"></i> SEND MESSAGE</a>
         </button>
       </p>
     </form>
@@ -124,7 +124,7 @@ body, html {
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
-  <a href="http://imodspro.com/store" style="text-decoration: none;" class="w3-button w3-text-black w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <a href="http://imodspro.com/store" class="w3-button w3-text-black w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <a href="https://www.google.com/"><i class="fa fa-facebook-official w3-text-white w3-hover-opacity"></i></a>
     <a href="https://www.instagram.com/imodspro/"><i class="fa fa-instagram w3-text-white w3-hover-opacity"></i></a>
