--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ body, html {
     <div class="w3-col m6">
       <h3>Want a Customized Look?</h3>
       <p>Look no further! It's not a skin, it's your phone!</p>
-      <p><a href="#work" style="text-decoration: none;" class="w3-button w3-black"><i class="fa fa-th"> </i> View Our Works</a></p>
+      <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> View Our Works</a></p>
     </div>
     <div class="w3-col m6">
       <img class="w3-image w3-round-large" src="https://cdn.discordapp.com/attachments/353766529277362188/591114244955570186/image0.jpg" alt="Custom_Phone" width="500" height="700">
@@ -137,7 +137,7 @@ body, html {
     <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> goodfixez@gmail.com</p>
     <br>
         <button class="w3-button w3-black" type="submit">
-          <a href="mailto:goodfixez@gmail.com" style="text-decoration: none;" class="w3-text-white"><i class="fa fa-paper-plane w3-text-white"></i> SEND MESSAGE</a>
+          <a href="mailto:goodfixez@gmail.com" class="w3-text-white"><i class="fa fa-paper-plane w3-text-white"></i> SEND MESSAGE</a>
         </button>
       </p>
     </form>
@@ -148,7 +148,7 @@ body, html {
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
-  <a href="#home" style="text-decoration: none;" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <a href="https://www.google.com/"><i class="fa fa-facebook-official w3-text-white w3-hover-opacity"></i></a>
     <a href="https://www.instagram.com/imodspro/"><i class="fa fa-instagram w3-text-white w3-hover-opacity"></i></a>
