--- a/store/index.html
+++ b/store/index.html
@@ -63,10 +63,10 @@ body, html {
     <div class="w3-third w3-margin-bottom">
 
         <div class="w3-content w3-display-container">
-            <img class="Slides" src="https://cdn.discordapp.com/attachments/353766529277362188/591138813720395776/6s.png" alt="iPhone 6s" style="width:100%">
-            <img class="Slides" src="https://s.appleinsider.ru/2017/09/iphone-3-750x467.jpg" alt="iPhone 6s" style="width:100%">
-            <img class="Slides" src="https://cdn.discordapp.com/attachments/353766529277362188/591138813720395776/6s.png" alt="iPhone 6s" style="width:100%">
-            <img class="Slides" src="https://s.appleinsider.ru/2017/09/iphone-3-750x467.jpg" alt="iPhone 6s" style="width:100%">
+            <img class="Item1" src="https://cdn.discordapp.com/attachments/353766529277362188/591138813720395776/6s.png" alt="iPhone 6s" style="width:100%">
+            <img class="Item1" src="https://s.appleinsider.ru/2017/09/iphone-3-750x467.jpg" alt="iPhone 6s" style="width:100%">
+            <img class="Item1" src="https://cdn.discordapp.com/attachments/353766529277362188/591138813720395776/6s.png" alt="iPhone 6s" style="width:100%">
+            <img class="Item1" src="https://s.appleinsider.ru/2017/09/iphone-3-750x467.jpg" alt="iPhone 6s" style="width:100%">
   
             <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
             <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
@@ -82,7 +82,7 @@ body, html {
             
             function showDivs(n) {
               var i;
-              var x = document.getElementsByClassName("Slides");
+              var x = document.getElementsByClassName("Item1");
               if (n > x.length) {slideIndex = 1}
               if (n < 1) {slideIndex = x.length}
               for (i = 0; i < x.length; i++) {
