--- a/store/index.html
+++ b/store/index.html
@@ -95,10 +95,10 @@ body, html {
       <div class="w3-container w3-light-grey">
         <h3 class="w3-center">iPhone 6s</h3>
         <h4 class="w3-bold w3-center">$170</h4>
-        <p class="w3-center">Space Grey 64gb Factory Unlocked</p>
+        <p class="w3-large w3-center">Space Grey 64gb Factory Unlocked, Brand New Battery. Running on iOS 11.3.1</p>
         <p class="w3-text-green w3-center">In stock</p>
-        <p class="w3-large w3-center"><i class="fa fa-phone"></i> <i class="fa fa-wifi"></i></p>
-        <a href="https://imodspro.com/store/iPhone6s-64gb" class="w3-button w3-block w3-black w3-margin-bottom">View Item</a>
+        <p class="w3-center">For more images or information, feel free to contact us!</p>
+        <a href="https://imodspro.com/store/iPhone6s-64gb" class="w3-button w3-block w3-black w3-margin-bottom">Buy It Now</a>
       </div>
     </div>
     <div class="w3-third w3-margin-bottom">
@@ -109,18 +109,18 @@ body, html {
         <p class="w3-center">Space Grey 64gb Factory Unlocked</p>
         <p class="w3-text-red w3-center">Out of stock</p>
         <p class="w3-large w3-center"><i class="fa fa-phone"></i> <i class="fa fa-wifi"></i></p>
-        <a href="" class="w3-button w3-block w3-black w3-margin-bottom" >View Item</a>
+        <a href="" class="w3-button w3-block w3-black w3-margin-bottom">Buy It Now</a>
       </div>
     </div>
     <div class="w3-third w3-margin-bottom">
-      <img src="https://cdn.discordapp.com/attachments/353766529277362188/591138813720395776/6s.png" alt="iPhone 6s 3" style="width:100%">
+      <img src="https://cdn.vox-cdn.com/uploads/chorus_image/image/47144918/tnailnew.0.0.jpg" alt="iPhone 6s 3" style="width:100%">
       <div class="w3-container w3-light-grey">
         <h3 class="w3-center">iPhone 6</h3>
         <h4 class="w3-bold w3-center">$180</h4>
         <p class="w3-center">Space Grey 64gb Factory Unlocked</p>
         <p class="w3-text-red w3-center">Out of stock</p>
         <p class="w3-large w3-center"><i class="fa fa-phone"></i> <i class="fa fa-wifi"></i></p>
-        <a href="" class="w3-button w3-block w3-black w3-margin-bottom" >View Item</a>
+        <a href="" class="w3-button w3-block w3-black w3-margin-bottom">Buy It Now</a>
       </div>
     </div>
   </div>
