--- a/store/index.html
+++ b/store/index.html
@@ -63,10 +63,8 @@ body, html {
     <div class="w3-third w3-margin-bottom">
 
         <div class="w3-content w3-display-container">
-            <img class="Item1" src="https://cdn.discordapp.com/attachments/353766529277362188/591138813720395776/6s.png" alt="iPhone 6s" style="width:100%">
-            <img class="Item1" src="https://s.appleinsider.ru/2017/09/iphone-3-750x467.jpg" alt="iPhone 6s" style="width:100%">
-            <img class="Item1" src="https://cdn.discordapp.com/attachments/353766529277362188/591138813720395776/6s.png" alt="iPhone 6s" style="width:100%">
-            <img class="Item1" src="https://s.appleinsider.ru/2017/09/iphone-3-750x467.jpg" alt="iPhone 6s" style="width:100%">
+            <img class="Item1" src="https://cdn.discordapp.com/attachments/353766529277362188/594629426344493097/image0.jpg" alt="iPhone 6s">
+            <img class="Item1" src="https://cdn.discordapp.com/attachments/353766529277362188/594629410540224523/image0.jpg" alt="iPhone 6s">
   
             <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
             <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
@@ -102,7 +100,7 @@ body, html {
       </div>
     </div>
     <div class="w3-third w3-margin-bottom">
-      <img src="https://cdn.discordapp.com/attachments/353766529277362188/591138813720395776/6s.png" alt="iPhone 6s 2" style="width:100%">
+      <img src="https://cdn.discordapp.com/attachments/353766529277362188/594632471237230602/20190402_100607.png" alt="iPhone 6s 2">
       <div class="w3-container w3-light-grey">
         <h3 class="w3-center">iPhone 6</h3>
         <h4 class="w3-bold w3-center">$180</h4>
@@ -113,7 +111,7 @@ body, html {
       </div>
     </div>
     <div class="w3-third w3-margin-bottom">
-      <img src="https://cdn.vox-cdn.com/uploads/chorus_image/image/47144918/tnailnew.0.0.jpg" alt="iPhone 6s 3" style="width:100%">
+      <img src="https://cdn.discordapp.com/attachments/353766529277362188/594632471237230602/20190402_100607.png" alt="iPhone 6s 3">
       <div class="w3-container w3-light-grey">
         <h3 class="w3-center">iPhone 6</h3>
         <h4 class="w3-bold w3-center">$180</h4>
