--- a/index.html
+++ b/index.html
@@ -56,12 +56,10 @@ body, html {
 
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
-  <a href="http://imodspro.com/" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
-  <a href="https://imodspro.com/#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
-  <a href="http://imodspro.com/store" onclick="w3_close()" class="w3-bar-item w3-button">STORE</a>
-  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
-  <a href="" onclick="w3_close()" class="w3-bar-item w3-button">yes</a>
+    <a href="http://imodspro.com/" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
+    <a href="https://imodspro.com/#about" class="w3-bar-item w3-button">ABOUT</a>
+    <a href="http://imodspro.com/store" class="w3-bar-item w3-button"><img src="https://cdn.discordapp.com/attachments/353766529277362188/591318506742480942/Webp.net-resizeimage.png"> STORE</a>
+    <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
 </nav>
 
 <!-- Header with full-height image -->
@@ -111,7 +109,7 @@ body, html {
     <div class="w3-col m6">
       <h3>Want a Customized Look?</h3>
       <p>Look no further! It's not a skin, it's your phone!</p>
-      <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> View Our Works</a></p>
+      <p><a href="https://www.instagram.com/imodspro/" class="w3-button w3-black"><i class="fa fa-th"> </i> View Our Works</a></p>
     </div>
     <div class="w3-col m6">
       <img class="w3-image w3-round-large" src="https://cdn.discordapp.com/attachments/353766529277362188/591114244955570186/image0.jpg" alt="Custom_Phone" width="500" height="700">
