--- a/m/index.html
+++ b/m/index.html
@@ -122,7 +122,7 @@ body, html {
       <p><a href="https://www.instagram.com/imodspro/" class="w3-button w3-black"><i class="fa fa-th"> </i> View Our Works</a></p>
     </div>
     <div class="w3-col m6">
-      <img class="w3-image w3-round-large w3-center" src="https://cdn.discordapp.com/attachments/353766529277362188/591114244955570186/image0.jpg" alt="Custom_Phone" width="500" height="700">
+      <img class="w3-image w3-round-large w3-center" src="https://cdn.discordapp.com/attachments/353766529277362188/591114244955570186/image0.jpg" alt="Custom_Phone" width="100%" height="700">
     </div>
   </div>
 </div>
