--- a/m/store/index.html
+++ b/m/store/index.html
@@ -27,13 +27,6 @@ body, html {
 
 <body>
 
-  <script type="text/javascript">
-    <!--
-    if (screen.width >= 699) {
-    document.location = "https://imodspro.com/store";
-    }
-    //-->
-    </script>
 
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
@@ -66,7 +59,7 @@ body, html {
 
 <!-- Store -->
 
-  <div class="w3-row-padding w3-padding-5" style="padding:128px 16px" id="store">
+  <div class="w3-row-padding w3-padding-5" style="padding:128px 1px" id="store">
     <h3 class="w3-center">STORE</h3>
 
        <!-- item 2 Start -->
@@ -107,7 +100,7 @@ body, html {
           </script>
     <!--Item 2 Slideshow End-->
      <!--Item 2 info start-->
-    <div class="w3-container w3-light-grey">
+    <div class="w3-container w3-light-grey>
       <h3 class="w3-center">iPhone 6s</h3>
       <h4 class="w3-bold w3-center">$185</h4>
       <p class="w3-large w3-center">Rose Gold 64gb Factory Unlocked, Brand New Battery MINT (see photos)</p>
