--- a/m/store/index.html
+++ b/m/store/index.html
@@ -21,7 +21,7 @@ body, html {
   line-height: 1.8;
 }
 .w3-bar .w3-button {
-  padding: 16px;
+  padding: 1px;
 }
 </style>
 
@@ -59,7 +59,7 @@ body, html {
 
 <!-- Store -->
 
-  <div class="w3-row-padding w3-padding-5" style="padding:128px" id="store">
+  <div class="w3-row-padding w3-padding-5" style="padding:128px 16px" id="store">
     <h3 class="w3-center">STORE</h3>
 
        <!-- item 2 Start -->
