--- a/m/store/index.html
+++ b/m/store/index.html
@@ -7,7 +7,9 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- no horizonatal scrolling and smooth scrolling start -->
 <link rel="stylesheet" href="https://iModsPro.com/main.css">
+<!-- no horizonatal scrolling and smooth scrolling end -->
 
 <!-- favicon -->
 <head>
@@ -59,8 +61,8 @@ body, html {
 
 <!-- Store -->
 
-  <div class="w3-row-padding w3-padding-5" style="padding:128px 16px" id="store">
-    <h3 class="w3-center">STORE</h3>
+  <div class="\ w3-padding-5" style="" id="store">
+    <h3 class="w3-center" style="margin-top:48px">STORE</h3>
 
        <!-- item 2 Start -->
     <!--Item 2 Slideshow Start-->
@@ -100,7 +102,7 @@ body, html {
           </script>
     <!--Item 2 Slideshow End-->
      <!--Item 2 info start-->
-    <div class="w3-container w3-light-grey>
+    <div class="w3-container w3-light-grey">
       <h3 class="w3-center">iPhone 6s</h3>
       <h4 class="w3-bold w3-center">$185</h4>
       <p class="w3-large w3-center">Rose Gold 64gb Factory Unlocked, Brand New Battery MINT (see photos)</p>
